test/conformance/chainsaw/cli/apply/apply-gpols-in-cluster-mode-with-context/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: apply-gpols-in-cluster-mode-with-context
spec:
  steps:
  - name: step-01
    try:
    - script:
        content: kubectl create namespace test-ns
  - name: step-02
    try:
    - script:
        content: kyverno apply policy.yaml --context context.yaml --cluster
        check:
          (contains($stdout, 'Generation completed successfully.')): true
